@@ -1,6 +1,12 @@
 Post-v20.12.0
 -------------------------
   - Support ECMP multiple nexthops for reroute router policies.
+  - Change the semantic of the "Logical_Switch_Port.up" field such that it is
+    set to "true" only when all corresponding OVS openflow operations have
+    been processed.  This also introduces a new "OVS.Interface.external-id",
+    "ovn-installed".  This external-id is set by ovn-controller only after all
+    openflow operations corresponding to the OVS interface being added have
+    been processed.
 
 OVN v20.12.0 - xx xxx xxxx
 --------------------------
